# Probabilistic-Deep-Learning-with-TensorFlow

./: .gitignore  00_The_TensorFlow_Probability_library.ipynb  02_Multivariate_Gaussian_with_full_covariance.ipynb  Capstone_Project.ipynb  LICENSE  README.md  Week_2_Programming_Assignment.ipynb  Week_3_Programming_Assignment.ipynb  Week_4_Programming_Assignment.ipynb  main.py  pyproject.toml  requirements.txt
01_The TensorFlow_Probability_library/: 00_The_TensorFlow_Probability_library.ipynb  00_Univariate_Distributions.ipynb  01_MultiVariate_Distributions.ipynb  01_[Exercises]The_TensorFlow_Probability_library_.ipynb  02_Independent_Distributions.ipynb  03_Broadcasting_rules.ipynb  03_Sampling and Log Probabilities.ipynb  04_Programming_Assignment.ipynb  04_Trainable_Distributions.ipynb  05_tfp_Distributions_Summary_.ipynb  06_Independent_dist_Naive_Clasif.ipynb  07_Naive_Bayes_Classif_with_TFP.ipynb  08_Multivariate_Gaussian_with_full_covariance.ipynb  09_Broadcasting_rules.ipynb  10_Naive_Bayes_&_logistic_regression.ipynb  README.md
02_Probabilistic_layers_and_Bayesian_Neural_Networks/: Probabilistic_layers_and_Bayesian_Neural_Networks.ipynb  Programming_Assignment.ipynb  README.md
03_Bijectors_and_Normalising_Flows/: Bijectors_and_Normalising_Flows.ipynb
04_Variational_Autoencoders/: Variational_Autoencoders.ipynb
05_Capstone_Project/: Probabilistic_generative_models.ipynb
05_MCMC_and_Hamiltonian_Monte_Carlo/: 00_Introduction_to_MCMC.ipynb  01_Hamiltonian_Monte_Carlo.ipynb  02_Bayesian_Model_Comparison.ipynb  03_Hierarchical_Bayesian_Models.ipynb
(+13 files in other folders)
